# Winning

./: README.md  demo_docs_agent.py  main.py  pyproject.toml  test_portia_gmail.py
custom_tools/: __init__.py  crawl_tool.py  extract_tool.py  file_writer_tool.py  pdf_generator_tool.py  registry.py
models/: auth_models.py  docs_models.py  document_models.py  gmail_models.py
routes/: auth_routes.py  docs_routes.py  document_routes.py  gmail_routes.py
services/: auth_service.py  docs_service.py  document_service.py  gmail_service.py  portia_client.py
